fix overflow settings

--- a/src/main/resources/public/scss/modals/addWidget/widgetSettings/settingFilterSearch/setting-filters.scss
+++ b/src/main/resources/public/scss/modals/addWidget/widgetSettings/settingFilterSearch/setting-filters.scss
@@ -22,5 +22,4 @@
 .modal-add-widget-setting-filters {
   padding-top: 17px;
   width: 100%;
-  overflow: hidden;
 }
